[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/session/game_session.gd" type="Script" id=1]
[ext_resource path="res://ui/session/player_tree.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/session/cards_panel.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/theme/theme.tres" type="Theme" id=4]
[ext_resource path="res://ui/session/variants_container.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/session/chat.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/session/sentence_container.tscn" type="PackedScene" id=7]

[node name="GameSession" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 250.0
margin_bottom = 600.0

[node name="PlayerTree" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_right = 250.0
margin_bottom = 463.0
rect_min_size = Vector2( 250, 0 )
size_flags_vertical = 3

[node name="Chat" parent="VBoxContainer" instance=ExtResource( 6 )]
margin_top = 467.0
margin_right = 250.0
margin_bottom = 600.0

[node name="BoardContainer" type="VBoxContainer" parent="."]
visible = false
margin_left = 254.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SentencePanel" type="Panel" parent="BoardContainer"]
margin_right = 770.0
margin_bottom = 298.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SentenceContainer" parent="BoardContainer/SentencePanel" instance=ExtResource( 7 )]

[node name="VariantsContainer" parent="BoardContainer/SentencePanel" instance=ExtResource( 5 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="CardsPanel" parent="BoardContainer" instance=ExtResource( 3 )]
margin_top = 302.0
margin_right = 770.0
margin_bottom = 600.0

[node name="SessionSettings" type="Panel" parent="."]
margin_left = 254.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="SessionSettings"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="SessionSettings/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 750.0
margin_bottom = 580.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="SessionSettings/MarginContainer/VBoxContainer"]
margin_right = 730.0
margin_bottom = 531.0
size_flags_vertical = 3

[node name="StartButton" type="Button" parent="SessionSettings/MarginContainer/VBoxContainer"]
margin_left = 342.0
margin_top = 535.0
margin_right = 387.0
margin_bottom = 560.0
size_flags_horizontal = 4
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorDialog" type="AcceptDialog" parent="."]
margin_right = 55.0
margin_bottom = 58.0
window_title = "Внимание!"

[connection signal="pressed" from="SessionSettings/MarginContainer/VBoxContainer/StartButton" to="." method="_start_session"]
